--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4974,11 +4974,16 @@ en:
         is what we recommend using
     period_select:
       all: All
-      past_30_days: past 30 days
-      past_7_days: past 7 days
-      past_day: past day
-      past_hour: past hour
-      past_year: past year
+      custom: custom
+      day: day
+      from: From
+      hour: hour
+      past: past
+      seven_days: 7 days
+      thirty_days: 30 days
+      to: To
+      update: Update
+      year: year
   stolen:
     index:
       ambassador: ambassador
