move dashboard link up

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2071,7 +2071,7 @@ en:
     - Fri
     - Sat
     abbr_month_names:
-    - 
+    -
     - Jan
     - Feb
     - Mar
@@ -2097,7 +2097,7 @@ en:
       long: "%B %d, %Y"
       short: "%b %d"
     month_names:
-    - 
+    -
     - January
     - February
     - March
@@ -4963,7 +4963,7 @@ en:
         <strong>%{link}</strong> to automatically register the bikes you sell to your
         customers.
       multi_serial_search: Multi serial search
-      organization_dashboard: "%{org_name} dashboard"
+      overview_dashboard: Dashboard
       organization_locations: "%{org_name} locations"
       organization_profile: "%{org_name} profile"
       other_point_of_sale_system: Other Point of Sale system?
