Move dashboard link up (#1473)

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4963,10 +4963,10 @@ en:
         <strong>%{link}</strong> to automatically register the bikes you sell to your
         customers.
       multi_serial_search: Multi serial search
-      organization_dashboard: "%{org_name} dashboard"
       organization_locations: "%{org_name} locations"
       organization_profile: "%{org_name} profile"
       other_point_of_sale_system: Other Point of Sale system?
+      overview_dashboard: Dashboard
       read_a_full_explanation_html: Read a full explanation of %{link}.
       recoveries: Recoveries
       register_bikes_with_link_html: Register bikes with our <strong>%{link}</strong>
