Rename drop handlebar type to drop_bar

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -738,7 +738,7 @@ en:
         titanium: Titanium
       handlebar_type:
         bmx: BMX style
-        drop: Drop
+        drop_bar: Drop
         flat: Flat or riser
         forward: Forward facing
         other: Not handlebars
