--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -759,6 +759,8 @@ en:
           has_many: Cannot delete record because dependent %{record} exist
           has_one: Cannot delete record because a dependent %{record} exists
       models:
+        abandoned_record:
+          address_required: Requires the address (or location) of this bike
         bike:
           not_found: not found
           suspended: suspended and can't be used
@@ -1247,6 +1249,7 @@ en:
       your_full_address_is_required: Your full address is required by %{org_name}
       zipcode: Postal code
     organized_access_panel:
+      abandoned_bike_modal_title: Record %{bike_type} abandoned
       access_panel: Access Panel
       additional_message: Additional message
       address: 'Address:'
@@ -1289,6 +1292,7 @@ en:
       owner_email: Owner email
       owner_name: Owner name
       permission: Permission
+      record_abandoned: Record abandoned
       registered: 'Registered:'
       send: Send
       send_message: Send message
