--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1670,6 +1670,14 @@ en:
           your_org_does_not_have_access: >-
             Your organization doesn't have access to that, please contact Bike Index
             support.
+      abandoned_records:
+        create:
+          abandoned_recorded: Abandoned %{bike_type} recorded
+          unable_to_record: Unable to record - %{errors}
+        ensure_access_to_abandoned_bikes!:
+          your_org_does_not_have_access: >-
+            Your organization doesn't have access to that, please contact Bike Index
+            support.
       stickers:
         ensure_access_to_bike_stickers!:
           org_does_not_have_access: >-
@@ -3676,10 +3684,10 @@ en:
       log_in: log in
       logout: Logout
       multi_serial_search: Multi serial search
+      org_abandoned_bikes: "%{org_name} Abandoned Bikes"
       org_bikes: "%{org_name} Bikes"
       org_dashboard: "%{org_name} Dashboard"
       org_impounded_bikes: "%{org_name} Impounded Bikes"
-      org_abandoned_bikes: "%{org_name} Abandoned Bikes"
       org_locations: "%{org_name} locations"
       org_profile: "%{org_name} profile"
       recoveries: Recoveries
@@ -4946,6 +4954,7 @@ en:
       thank_you: Thank you so much for using Bike Index!
       thanks_for_using_bike_index: Thanks for using Bike Index!
     organized_skeleton:
+      abandoned_bikes: Abandoned Bikes
       add_a_bike: Add a bike
       additional_features_html: >-
         Bike Index provides additional features for verified Law Enforcement organizations.
@@ -4957,7 +4966,6 @@ en:
       discuss: Discuss
       exports: Exports
       geomessaging: GeoMessaging
-      abandoned_bikes: Abandoned Bikes
       getting_started: Getting started
       how_integration_works: how the integration works
       impounded_bikes: Impounded Bikes
