now just need to click test

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -760,7 +760,7 @@ en:
           has_one: Cannot delete record because a dependent %{record} exists
       models:
         abandoned_record:
-          address_required: Requires the address (or location) of this bike
+          address_required: "(or location) of this abandoned bike required"
         bike:
           not_found: not found
           suspended: suspended and can't be used
@@ -1596,6 +1596,14 @@ en:
           We're sorry, that organization doesn't have a user set up to register bikes
           through. Email contact@bikeindex.org if this seems like an error.
     organized:
+      abandoned_records:
+        create:
+          abandoned_recorded: Abandoned %{bike_type} recorded
+          unable_to_record: Unable to record - %{errors}
+        ensure_access_to_abandoned_bikes!:
+          your_org_does_not_have_access: >-
+            Your organization doesn't have access to that, please contact Bike Index
+            support.
       ambassador_task_assignments:
         update:
           could_not_update: Could not update activity status. Please try again later.
@@ -1667,14 +1675,6 @@ en:
           message_sent: "%{message_kind} message sent"
           unable_to_send: Unable to send message - %{errors}
         ensure_permitted_message_kind!:
-          your_org_does_not_have_access: >-
-            Your organization doesn't have access to that, please contact Bike Index
-            support.
-      abandoned_records:
-        create:
-          abandoned_recorded: Abandoned %{bike_type} recorded
-          unable_to_record: Unable to record - %{errors}
-        ensure_access_to_abandoned_bikes!:
           your_org_does_not_have_access: >-
             Your organization doesn't have access to that, please contact Bike Index
             support.
@@ -2083,7 +2083,7 @@ en:
     - Fri
     - Sat
     abbr_month_names:
-    -
+    - 
     - Jan
     - Feb
     - Mar
@@ -2109,7 +2109,7 @@ en:
       long: "%B %d, %Y"
       short: "%b %d"
     month_names:
-    -
+    - 
     - January
     - February
     - March
@@ -4075,6 +4075,16 @@ en:
         Your current account (<strong>%{user_email}</strong>) will be a member of
         the organization you create.
   organized:
+    abandoned_records:
+      index:
+        abandoned_records: Abandoned Records
+      show:
+        abandoned_record: Abandoned Record
+        additional_text: Additional text
+        bike: Bike
+        none: none
+        recorded: Recorded
+        recorder: Recorder
     ambassador_dashboards:
       getting_started:
         10_tips_for_getting_started_in_your_town: 10 tips for getting started in your
