Updates for recoveries display
Switch Organization bikes_nearby to nearby_bikes for consistency with nearby_org

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4235,6 +4235,7 @@ en:
         owner: Owner
         recovered_at: Date Recovered
         recovery: recovery
+        show_only_organization_recoveries: Show only %{org_short_name} recoveries
       search:
         all: All
         bike: bike
