--- a/config/locales/translation.nl.yml
+++ b/config/locales/translation.nl.yml
@@ -4386,6 +4386,8 @@ nl:
         owner: Eigenaar
         recovery: Herstel
         recovered_at: Datum hersteld
+        show_only_organization_recoveries: Toon alleen %{org_short_name} fietsen
+        render_chart: Toon grafiek
       search:
         all: Alle
         bike: Fiets
