--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -759,7 +759,7 @@ en:
           has_many: Cannot delete record because dependent %{record} exist
           has_one: Cannot delete record because a dependent %{record} exists
       models:
-        abandoned_record:
+        parking_notification:
           address_required: "(or location) of this abandoned bike required"
         bike:
           not_found: not found
@@ -1270,7 +1270,7 @@ en:
       creator: Creator
       edit: Edit
       email_to_deal_with_this_html: Email %{support_link} to deal with this.
-      existing_abandoned_records: Existing abandoned records for this %{bike_type}
+      existing_parking_notifications: Existing abandoned records for this %{bike_type}
       geomessage: GeoMessage
       impound: Impound
       impound_are_you_sure: Are you sure you want to %{bike_type}?
@@ -1604,9 +1604,9 @@ en:
           We're sorry, that organization doesn't have a user set up to register bikes
           through. Email contact@bikeindex.org if this seems like an error.
     organized:
-      abandoned_records:
+      parking_notifications:
         create:
-          abandoned_recorded: Abandoned %{bike_type} recorded
+          parking_notificationed: Abandoned %{bike_type} recorded
           unable_to_record: Unable to record - %{errors}
         ensure_access_to_abandoned_bikes!:
           your_org_does_not_have_access: >-
@@ -2091,7 +2091,7 @@ en:
     - Fri
     - Sat
     abbr_month_names:
-    - 
+    -
     - Jan
     - Feb
     - Mar
@@ -2117,7 +2117,7 @@ en:
       long: "%B %d, %Y"
       short: "%b %d"
     month_names:
-    - 
+    -
     - January
     - February
     - March
@@ -4083,9 +4083,9 @@ en:
         Your current account (<strong>%{user_email}</strong>) will be a member of
         the organization you create.
   organized:
-    abandoned_records:
+    parking_notifications:
       index:
-        abandoned_records: Abandoned Records
+        parking_notifications: Abandoned Records
         bike: Bike
         impounded: Impounded
         kind: Kind
@@ -4093,7 +4093,7 @@ en:
         recorded: Recorded
         recorder: Recorder
       show:
-        abandoned_record: Abandoned Record
+        parking_notification: Abandoned Record
         additional_text: Additional text
         bike: Bike
         none: none
